--- a/movie-info-service/pom.xml
+++ b/movie-info-service/pom.xml
@@ -9,12 +9,12 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.microservice</groupId>
-	<artifactId>movie-catalog-service</artifactId>
+	<artifactId>movie-info-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>movie-catalog-service</name>
-	<description>Demo project for Spring Boot</description>
+	<name>movie-info-service</name>
+	<description>Provides movie information</description>
 	<properties>
-		<java.version>16</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
